--- a/automations/arthur_temp_warn.yaml
+++ b/automations/arthur_temp_warn.yaml
@@ -11,7 +11,7 @@
         state: 'home'
       - condition: time
         after: '20:00:00'
-        before: '06:00:00'
+        before: '00:30:00'
   action:
     - service: homeassistant.turn_on
       entity_id: switch.rf_sz_nachttisch
@@ -19,3 +19,7 @@
       data:
         title: 'Warnung!'
         message: 'Es ist zu kalt in Arthurs Zimmer!'
+    - delay:
+        minutes: 5
+    - service: homeassistant.turn_off
+      entity_id: switch.rf_sz_nachttisch
