--- a/groups/flur.yaml
+++ b/groups/flur.yaml
@@ -5,7 +5,7 @@ flur:
     - sensor.temperature_158d00018734bb
     - sensor.humidity_158d00018734bb
     - input_boolean.motion_sensor_flur_aktiv
-    - binary_sensor.rf_motion_flur
+    - sensor.motion_sensor_flur_last_seen
     - light.beleuchtung_flur
     - light.beleuchtung_esszimmer
     - light.stehlampe_flur
