--- a/groups/views.yaml
+++ b/groups/views.yaml
@@ -7,6 +7,7 @@ default_view:
     - climate.heizung
     # - group.arthur_zimmer
     - group.flur
+    - group.esszimmer
     - group.kueche
     - group.toilette
     # - group.weather
