--- a/configuration.yaml
+++ b/configuration.yaml
@@ -60,7 +60,7 @@ updater:
 # Example configuration.yaml entry with exclude
 recorder:
   purge_keep_days: 30
-  db_url: mysql://192.168.10.95/homeassistant?charset=utf8
+  db_url: mysql://homeassistant@192.168.10.95/homeassistant?charset=utf8
   exclude:
     domains:
       - automation
