--- a/sensor/last_person.yaml
+++ b/sensor/last_person.yaml
@@ -2,7 +2,7 @@
   sensors:
     last_person:
       value_template: >-
-        {% set persons = [group.person_dennis, group.person_mary] %}
+        {% set persons = [states.group.person_dennis, states.group.person_mary] %}
         {% for person in persons %}
           {% if as_timestamp(person.last_changed) == as_timestamp(persons | map(attribute='last_changed') | max) %}
             {{ person }}
