--- a/groups/views.yaml
+++ b/groups/views.yaml
@@ -30,6 +30,7 @@ media_view:
     - group.emby
     - media_player.lg_tv
     - media_player.volumio
+    - media_player.volumio_mpd
     - media_player.playstation_4
 
 devices_view:
