--- a/automations/toilette_motion.yaml
+++ b/automations/toilette_motion.yaml
@@ -15,7 +15,7 @@
         below: 8
   action:
     service: homeassistant.turn_on
-    entity_id: light.beleuchtung_toilette
+    entity_id: switch.beleuchtung_toilette
 
 - alias: toilett_movement_off
   trigger:
@@ -30,4 +30,4 @@
       state: 'on'
   action:
     service: homeassistant.turn_off
-    entity_id: light.beleuchtung_toilette
+    entity_id: switch.beleuchtung_toilette
