--- a/groups/flur.yaml
+++ b/groups/flur.yaml
@@ -6,7 +6,7 @@ flur:
     - sensor.humidity_158d00018734bb
     - input_boolean.motion_sensor_flur_aktiv
     - sensor.motion_sensor_flur_last_seen
-    - light.beleuchtung_flur
+    - switch.beleuchtung_flur
     - light.stehlampe_flur
     - script.yeelight_flur_pink
     - script.yeelight_flur_weiss
