--- a/groups/esszimmer.yaml
+++ b/groups/esszimmer.yaml
@@ -2,5 +2,5 @@ esszimmer:
   name: Esszimmer
   control: hidden
   entities:
-    - light.beleuchtung_esszimmer
+    - switch.beleuchtung_esszimmer
     - light.gateway_light_286c0788a9dd
