--- a/configuration.yaml
+++ b/configuration.yaml
@@ -10,7 +10,6 @@ homeassistant:
   customize_glob:
     'switch.rf_*':
       assumed_state: false
-      initial_state: false
       icon: 'mdi:lightbulb'
     'sensor.temperature_*':
       friendly_name: Temperatur
@@ -41,11 +40,14 @@ cloud:
         name: Custom Name for Alexa
       switch.plug_158d0001530b1b:
         name: Aquarium Beleuchtung
+        description: Aquarium Beleuchtung in Arthurs Kinderzimmer
         display_categories: LIGHT
       media_player.volumio:
         name: Radio Küche
+        description: Volumio in der Küche
       media_player.lg_tv:
-        name: TV
+        name: Fernseher
+        description: Fernseher im Wohnzimmer
         display_categories: TV
 
 config:
@@ -94,7 +96,7 @@ mqtt:
   discovery_prefix: homeassistant
   broker: 192.168.10.95
   port: 1883
-  client_id: homeassistant
+  client_id: !secret MQTT_CLIENT_ID
   protocol: 3.1
   username: !secret MQTT_USERNAME
   password: !secret MQTT_PASSWORD
