--- a/inputs/boolean.yaml
+++ b/inputs/boolean.yaml
@@ -8,6 +8,11 @@ motion_sensor_toilette_aktiv:
   initial: on
   icon: mdi:radar
 
+motion_sensor_bad_aktiv:
+  name: Bewegungsmelder aktiv
+  initial: on
+  icon: mdi:radar
+
 motion_sensor_kueche_aktiv:
   name: Bewegungsmelder aktiv
   initial: on
