--- a/automations/welcome.yaml
+++ b/automations/welcome.yaml
@@ -11,28 +11,32 @@
       entity_id: binary_sensor.rf_motion_flur
       state: 'off'
       for:
-        hours: 1
+        minutes: 15
   action:
     - service: notify.ios_iphone_von_dennis
       data_template:
         title: "Tür wurde geöffnet"
-        message: "{{ states.sensor.last_person }} hat das Haus betreten."
+        message: "{{ states.sensor.last_person.state }} hat das Haus betreten."
     ############# Ab hier nur vor 20:00 Uhr ####################################
     - condition: time
       before: '20:00:00'
+    - delay:
+        seconds: 5
     - service: media_player.volume_set
       entity_id: media_player.volumio
       data_template:
         volume_level: 0.65
-    - service: media_player.media_play
+    - service: media_player.play_media
       data:
         entity_id: media_player.volumio_mpd
-        media_content_id: "http://hassbian.local:8123/sounds/two-tone-chime.mp3"
+        media_content_id: "http://192.168.10.95:8123/local/sounds/two-tone-chime.mp3"
         media_content_type: "music"
     - service: tts.google_say
       entity_id: media_player.volumio_mpd
       data_template:
-        message: "Hallo {{ states.sensor.last_person }}, ich freue mich dass du wieder hier bist."
+        message: "Hallo {{ states.sensor.last_person.state }}, ich freue mich dass du wieder hier bist."
+    - delay:
+        seconds: 10
     - service: media_player.volume_set
       entity_id: media_player.volumio
       data_template:
