--- a/customize.yaml
+++ b/customize.yaml
@@ -2,6 +2,7 @@
 switch.beleuchtung_flur:
   friendly_name: Decken-Spots
   icon: 'mdi:ceiling-light'
+  show_last_changed: true
 light.stehlampe_flur:
   friendly_name: Stehlampe
   icon: 'mdi:lightbulb-on-outline'
@@ -14,6 +15,12 @@ switch.beleuchtung_esszimmer:
 switch.beleuchtung_kueche:
   friendly_name: Beleuchtung
   icon: 'mdi:ceiling-light'
+switch.sonoff_bad_1:
+  friendly_name: Beleuchtung
+  icon: 'mdi:ceiling-light'
+switch.sonoff_bad_2:
+  friendly_name: Spiegel
+  icon: 'mdi:lightbulb-on-outline'
 light.gateway_light_286c0788a9dd:
   friendly_name: Gateway Licht
   icon: 'mdi:lightbulb-on-outline'
@@ -55,6 +62,9 @@ sensor.heizung_power:
 binary_sensor.door_window_sensor_158d00014dbac9:
   friendly_name: Eingangstür
   icon: 'mdi:door'
+binary_sensor.door_window_sensor_158d0001f3a0f0:
+  friendly_name: Fenster
+  icon: 'mdi:window-closed'
 
 # Wetter
 input_text.weather:
