setup kinderzimmer switches

--- a/customize.yaml
+++ b/customize.yaml
@@ -24,6 +24,12 @@ switch.sonoff_bad_2:
 light.gateway_light_286c0788a9dd:
   friendly_name: Gateway Licht
   icon: 'mdi:lightbulb-on-outline'
+switch.sonoff_kz_1:
+  friendly_name: Spielbereich
+  icon: 'mdi:ceiling-light'
+switch.sonoff_kz_2:
+  friendly_name: Schlafbereich
+  icon: 'mdi:ceiling-light'
 
 # Xiaomi Sensoren
 binary_sensor.motion_sensor_158d000113dee1:
