--- a/groups/arthur.yaml
+++ b/groups/arthur.yaml
@@ -5,3 +5,5 @@ arthur_zimmer:
     - sensor.temperature_158d0001574111
     - sensor.humidity_158d0001574111
     - switch.rf_arthur_lichterkette
+    - switch.sonoff_kz_1
+    - switch.sonoff_kz_2
