update alexa config

--- a/alexa.yaml
+++ b/alexa.yaml
@@ -13,7 +13,7 @@ entity_config:
   light.kitchen:
     name: Custom Name for Alexa
   switch.plug_158d0001530b1b:
-    name: Aquarium Beleuchtung
+    name: Aquarium
     description: Aquarium Beleuchtung in Arthurs Kinderzimmer
     display_categories: LIGHT
   media_player.volumio:
