--- a/automations/kueche.yaml
+++ b/automations/kueche.yaml
@@ -12,7 +12,7 @@
       - condition: numeric_state
         entity_id: sun.sun
         value_template: '{{ state.attributes.elevation }}'
-        below: 10
+        below: 12
       - condition: state
         entity_id: switch.rf_kueche2
         state: 'off'
@@ -56,13 +56,15 @@
     entity_id: binary_sensor.motion_sensor_158d00012326f7
     to: 'on'
   condition:
-    - condition: time
-      after: '06:00:00'
-      before: '08:00:00'
-    - condition: state
-      entity_id: media_player.volumio
-      state: 'idle'
-      for:
-        hours: 1
+    condition: and
+    conditions:
+      - condition: time
+        after: '06:00:00'
+        before: '08:00:00'
+      - condition: state
+        entity_id: media_player.volumio
+        state: 'idle'
+        for:
+          hours: 1
   action:
     service: script.volumio_play
