--- a/automations/welcome.yaml
+++ b/automations/welcome.yaml
@@ -8,7 +8,7 @@
       entity_id: group.familie
       state: 'home'
     - condition: state
-      entity_id: binary_sensor.rf_motion_flur
+      entity_id: binary_sensor.motion_sensor_158d0001e562ad
       state: 'off'
       for:
         minutes: 15
@@ -36,7 +36,7 @@
       data_template:
         message: "Hallo {{ states.sensor.last_person.state }}, ich freue mich dass du wieder hier bist."
     - delay:
-        seconds: 10
+        seconds: 8
     - service: media_player.volume_set
       entity_id: media_player.volumio
       data_template:
@@ -52,7 +52,7 @@
       entity_id: group.familie
       state: 'home'
     - condition: state
-      entity_id: binary_sensor.rf_motion_flur
+      entity_id: binary_sensor.motion_sensor_158d0001e562ad
       state: 'off'
       for:
         hours: 1
