--- a/automations/bad.yaml
+++ b/automations/bad.yaml
@@ -63,8 +63,24 @@
       data_template:
         message: "Die Luftfeuchtigkeit im Bad ist aktuell bei {{ states.sensor.humidity_158d0001c2c57f.state }}%, bitte lüften!"
     - delay:
-        seconds: 10
+        seconds: 8
     - service: media_player.volume_set
       entity_id: media_player.volumio
       data_template:
         volume_level: 0.2
+
+- alias: bad_zahnbuerste_laden_on
+  trigger:
+    platform: time
+    at: '10:00:00'
+  action:
+    service: homeassistant.turn_on
+    entity_id: switch.sonoff_bad_2
+
+- alias: bad_zahnbuerste_laden_off
+  trigger:
+    platform: time
+    at: '13:00:00'
+  action:
+    service: homeassistant.turn_off
+    entity_id: switch.sonoff_bad_2
