--- a/automations/kueche.yaml
+++ b/automations/kueche.yaml
@@ -58,9 +58,23 @@
   condition:
     condition: and
     conditions:
-      - condition: time
-        after: '06:00:00'
-        before: '08:00:00'
+      - condition: or
+        conditions:
+          - condition: time
+            after: '06:00:00'
+            before: '08:00:00'
+            weekday:
+              - mon
+              - tue
+              - wed
+              - thu
+              - fri
+          - condition: time
+            after: '06:00:00'
+            before: '11:00:00'
+            weekday:
+              - sat
+              - sun
       - condition: state
         entity_id: media_player.volumio
         state: 'idle'
