--- a/alexa.yaml
+++ b/alexa.yaml
@@ -10,16 +10,44 @@ filter:
   exclude_entities:
     - switch.volumio_kueche
 entity_config:
-  light.kitchen:
-    name: Custom Name for Alexa
   switch.plug_158d0001530b1b:
     name: Aquarium
-    description: Aquarium Beleuchtung in Arthurs Kinderzimmer
-    display_categories: LIGHT
   media_player.volumio:
-    name: Radio Küche
-    description: Volumio in der Küche
+    name: Radio
+    display_categories: TV
   media_player.lg_tv:
     name: Fernseher
-    description: Fernseher im Wohnzimmer
     display_categories: TV
+  light.stehlampe_flur:
+    name: Stehlampe Flur
+  switch.beleuchtung_toilette:
+    name: Toilette
+  switch.beleuchtung_esszimmer:
+    name: Wandbeleuchtung
+  switch.beleuchtung_kueche:
+    name: Küche
+  switch.sonoff_bad_1:
+    name: Bad
+  switch.sonoff_bad_2:
+    name: Spiegel Beleuchtung
+  light.gateway_light_286c0788a9dd:
+    name: Gateway Licht
+  switch.sonoff_kz_1:
+    name: Spielbereich
+  switch.sonoff_kz_2:
+    name: Schlafbereich
+  switch.rf_kueche2:
+    name: Küche Rückwand
+  switch.rf_wz_stehlampe:
+    name: Stehlampe
+  switch.rf_wz_lichtkugel:
+    name: Lichtkugel
+  switch.rf_arthur_lichterkette:
+    name: Lichterkette
+  switch.sonoff_wz_1:
+    name: Beleuchtung Couch
+    icon: 'mdi:ceiling-light'
+  switch.sonoff_wz_2:
+    name: Beleuchtung Nähzimmer
+  switch.rf_sz_nachttisch:
+    name: Nachttisch
