--- a/groups/views.yaml
+++ b/groups/views.yaml
@@ -4,6 +4,7 @@ default_view:
   icon: mdi:home
   entities:
     - group.zuhause
+    - group.ha
     - climate.heizung
     # - group.arthur_zimmer
     - group.flur
