--- a/groups/zuhause.yaml
+++ b/groups/zuhause.yaml
@@ -24,4 +24,5 @@ zuhause:
     - sensor.door_sensor_eingang_last_open
     - sensor.temperature_158d0001a4c74d
     - sensor.pressure_158d0001a4c74d
-    - group.ha
+    - input_boolean.git_auto_update
+    - script.git_update_config
