update emulated_hue config, rm ha cloud

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -22,11 +22,7 @@ http:
   trusted_networks:
     - 192.168.10.0/24
 
-# cloud:
-#   alexa: !include alexa.yaml
-
 config:
-emulated_hue:
 history:
 homekit:
 ios:
@@ -108,6 +104,7 @@ weather:
 automation: !include_dir_merge_list automations
 binary_sensor: !include_dir_merge_list binary_sensor
 device_tracker: !include_dir_merge_list device_tracker
+emulated_hue: !include emulated_hue.yaml
 group: !include_dir_merge_named groups
 input_boolean: !include inputs/boolean.yaml
 input_datetime: !include inputs/datetime.yaml
