--- a/configuration.yaml
+++ b/configuration.yaml
@@ -73,6 +73,8 @@ mqtt:
   username: !secret MQTT_USERNAME
   password: !secret MQTT_PASSWORD
 
+doesntexist:
+
 camera:
   - platform: ffmpeg
     name: arthur_cam
