--- a/groups/zuhause.yaml
+++ b/groups/zuhause.yaml
@@ -26,3 +26,4 @@ zuhause:
     - sensor.pressure_158d0001a4c74d
     - input_boolean.git_auto_update
     - script.git_update_config
+    - script.all_off
