--- a/configuration.yaml
+++ b/configuration.yaml
@@ -52,10 +52,10 @@ recorder:
 
 frontend:
   themes: !include_dir_merge_named themes
-  extra_html_url:
-    - /local/custom_ui/custom-weather-card.html
-  extra_html_url_es5:
-    - /local/custom_ui/custom-weather-card.html
+  # extra_html_url:
+  #   - /local/custom_ui/custom-weather-card.html
+  # extra_html_url_es5:
+  #   - /local/custom_ui/custom-weather-card.html
 
 discovery:
   ignore:
