--- a/scripts/all_off.yaml
+++ b/scripts/all_off.yaml
@@ -3,17 +3,20 @@ all_off:
   sequence:
     - service: homeassistant.turn_off
       entity_id: group.all_lights
-    - service: switch.turn_off
+    - service: homeassistant.turn_off
       data_template:
-        entity_id: >
+        entity_id: >-
           {% set excludes = [
             'switch.plug_158d0001530b1b',
             'switch.sonoff'
           ] %}
-          {%- for switch in states.switch %}
-          {%- if switch.entity_id not in excludes %}
-          - {{ switch.entity_id }}
-          {%- endif %}
-          {%- endfor %}
+          {%- for switch in states.switch -%}
+          {%- if switch.entity_id not in excludes -%}
+            {{ switch.entity_id }}
+            {%- if not loop.last -%}
+              {{', '}}
+            {%- endif -%}
+          {%- endif -%}
+          {%- endfor -%}
     - service: media_player.turn_off
       entity_id: media_player.lg_tv
