--- a/packages/aquarium.yaml
+++ b/packages/aquarium.yaml
@@ -3,6 +3,7 @@ homeassistant:
     switch.plug_158d0001530b1b:
       friendly_name: Beleuchtung
       icon: 'mdi:lightbulb-on-outline'
+      extra_data_template: "${attributes.load_power !== 0 ? (attributes.load_power + 'W') : ''}"
 
 group:
   aquarium:
