--- a/scripts/all_off.yaml
+++ b/scripts/all_off.yaml
@@ -2,21 +2,33 @@ all_off:
   alias: Alles ausschalten
   sequence:
     - service: homeassistant.turn_off
-      entity_id: group.all_lights
-    - service: homeassistant.turn_off
       data_template:
         entity_id: >-
           {% set excludes = [
-            'switch.plug_158d0001530b1b',
-            'switch.sonoff'
+            'light.gateway_light_286c0788a9dd',
+            'light.gateway_light_7811dcb8c5ed'
           ] %}
-          {%- for switch in states.switch -%}
-          {%- if switch.entity_id not in excludes -%}
-            {{ switch.entity_id }}
+          [{%- for light in states.light -%}
+          {%- if light.entity_id not in excludes -%}
+            "{{ light.entity_id }}"
             {%- if not loop.last -%}
               {{', '}}
             {%- endif -%}
           {%- endif -%}
-          {%- endfor -%}
+          {%- endfor -%}]
+    - service: homeassistant.turn_off
+      data_template:
+        entity_id: >-
+          {% set excludes = [
+            'switch.plug_158d0001530b1b'
+          ] %}
+          [{%- for switch in states.switch -%}
+          {%- if switch.entity_id not in excludes -%}
+            "{{ switch.entity_id }}"
+            {%- if not loop.last -%}
+              {{','}}
+            {%- endif -%}
+          {%- endif -%}
+          {%- endfor -%}]
     - service: media_player.turn_off
       entity_id: media_player.lg_tv
