improve kz view

--- a/groups/views.yaml
+++ b/groups/views.yaml
@@ -20,7 +20,8 @@ kinderzimmer_view:
   name: Kinderzimmer
   view: yes
   entities:
-    - group.arthur_zimmer
+    - group.kz_status
+    - group.kz_licht
     - group.aquarium
     - camera.arthur_cam
 
