--- a/groups/kinderzimmer.yaml
+++ b/groups/kinderzimmer.yaml
@@ -1,9 +1,13 @@
-arthur_zimmer:
-  name: Arthur
+kz_status:
+  name: Kinderzimmer
   control: hidden
   entities:
     - sensor.temperature_158d0001574111
     - sensor.humidity_158d0001574111
+
+kz_licht:
+  name: Licht
+  entities:
     - switch.sonoff_kz_1
     - switch.sonoff_kz_2
     - light.gateway_light_7811dcb8c5ed
