--- a/automations/klingel.yaml
+++ b/automations/klingel.yaml
@@ -3,9 +3,37 @@
     platform: state
     entity_id: switch.klingel
     to: 'on'
+  condition:
+    - condition: state
+      entity_id: group.familie
+      state: 'home'
   action:
     - service: xiaomi_aqara.play_ringtone
       data:
         gw_mac: !secret XIAOMI_GATEWAY_1_MAC
         ringtone_id: 10
-        ringtone_vol: 75
+        ringtone_vol: 5
+    - condition: time
+      before: '20:00:00'
+    - delay:
+        seconds: 3
+    - service: xiaomi_aqara.play_ringtone
+      data:
+        gw_mac: !secret XIAOMI_GATEWAY_1_MAC
+        ringtone_id: 10
+        ringtone_vol: 45
+
+- alias: klingeling_notify
+  trigger:
+    platform: state
+    entity_id: switch.klingel
+    to: 'on'
+  condition:
+    - condition: state
+      entity_id: group.familie
+      state: 'not_home'
+  action:
+    - service: notify.notify
+      data:
+        title: 'Klingeling...'
+        message: 'Jemand hat die Klingel betätigt'
